Add event sourced PurchaseOrder entity